--- a/1. first.html
+++ b/1. first.html
@@ -6,7 +6,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="https://media-exp1.licdn.com/dms/image/C5603AQExOkedA-w3mw/profile-displayphoto-shrink_400_400/0/1637129833833?e=1670457600&v=beta&t=P2QS8I0Pw9B8aY2qabl4WKzGyXJiUjKapZDSL2JufqU" alt="image"></td>
+            <td><img src="" alt="image"></td>
             <td><h1> Mubin Chinchwalkar </h1>
         <h3>
         <p><em>2nd year bTech in <strong>CSE CPS</strong>.</em></p>
